jyhton/Neo4j/WDB-new/src/parser/generated/wdb/parser/QueryParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. QueryParser.java */
package wdb.parser;

import wdb.metadata.*;
import java.io.*;

/**
 * @author Bo Li
 *
 * TODO To change the template for this generated type comment go to
 * Window - Preferences - Java - Code Style - Code Templates
 */
public class QueryParser/*@bgen(jjtree)*/implements QueryParserTreeConstants, QueryParserConstants {/*@bgen(jjtree)*/
  protected static JJTQueryParserState jjtree = new JJTQueryParserState();public Query lastQuery;

        public Query getNextQuery() throws ParseException, TokenMgrError
        {
                lastQuery = QueryParser.Start();
                return lastQuery;
        }

  static final public Query Start() throws ParseException {
        Query q;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CLASS:
    case SUBCLASS:
    case INSERT:
    case FROM:
    case SOURCE:
    case INDEX:
    case MODIFY:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        q = Class();
        break;
      case SUBCLASS:
        q = Subclass();
        break;
      case INSERT:
        q = Insert();
        break;
      case FROM:
        q = Retrieve();
        break;
      case SOURCE:
        q = Source();
        break;
      case INDEX:
        q = Index();
        break;
      case MODIFY:
        q = Modify();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          {if (true) return q;}
      break;
    case 0:
      jj_consume_token(0);
                {if (true) return null;}
      break;
    case QUIT:
      jj_consume_token(QUIT);
          {if (true) return null;}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Query Class() throws ParseException {
        ClassDef cq = new ClassDef();
    jj_consume_token(CLASS);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      cq.name = getIdentifier();
      break;
    case LSTRING:
      cq.name = getLString();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case QSTRING:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      cq.comment = getQString();
    }
    jj_consume_token(LP);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      Attrs(cq);
    }
    jj_consume_token(RP);
    jj_consume_token(SC);
        {if (true) return cq;}
    throw new Error("Missing return statement in function");
  }

  static final public Query Subclass() throws ParseException {
        SubclassDef sq = new SubclassDef();
    jj_consume_token(SUBCLASS);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      sq.name = getIdentifier();
      break;
    case LSTRING:
      sq.name = getLString();
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case QSTRING:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      sq.comment = getQString();
    }
    Parents(sq);
    jj_consume_token(LP);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      Attrs(sq);
    }
    jj_consume_token(RP);
    jj_consume_token(SC);
        {if (true) return sq;}
    throw new Error("Missing return statement in function");
  }

  static final public Query Insert() throws ParseException {
        InsertQuery iq = new InsertQuery();
        ClassDef ci = new ClassDef();
    if (jj_2_1(2)) {
      jj_consume_token(INSERT);
      jj_consume_token(NEW);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ci.name = getIdentifier();
        break;
      case LSTRING:
        ci.name = getLString();
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(LP);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        AttrAss(ci, iq);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_5;
          }
          jj_consume_token(COMMA);
          AttrAss(ci, iq);
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(RP);
      jj_consume_token(SC);
        ci.comment = "Schemaless Insert";
        iq.className = ci.name;
        ci.sl = true;
        {if (true) return ci;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INSERT:
        jj_consume_token(INSERT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          iq.className = getIdentifier();
          break;
        case LSTRING:
          iq.className = getLString();
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FROM:
          jj_consume_token(FROM);
          iq.fromClassName = getIdentifier();
          jj_consume_token(WHERE);
          iq.expression = getExpression();
          break;
        default:
          jj_la1[12] = jj_gen;
          ;
        }
        jj_consume_token(LP);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          Assignments(iq);
          label_6:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case COMMA:
              ;
              break;
            default:
              jj_la1[13] = jj_gen;
              break label_6;
            }
            jj_consume_token(COMMA);
            Assignments(iq);
          }
          break;
        default:
          jj_la1[14] = jj_gen;
          ;
        }
        jj_consume_token(RP);
        jj_consume_token(SC);
                {if (true) return iq;}
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Query Retrieve() throws ParseException {
        RetrieveQuery rq = new RetrieveQuery();
        Token t;
    jj_consume_token(FROM);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      rq.className = getIdentifier();
      break;
    case LSTRING:
      rq.className = getLString();
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(RETRIEVE);
    AttributePath(rq);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_7;
      }
      jj_consume_token(COMMA);
      AttributePath(rq);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      jj_consume_token(WHERE);
      rq.expression = getExpression();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    jj_consume_token(SC);
                {if (true) return rq;}
    throw new Error("Missing return statement in function");
  }

  static final public Query Source() throws ParseException {
        SourceQuery sq = new SourceQuery();
    jj_consume_token(SOURCE);
    sq.filename = getQString();
    jj_consume_token(SC);
                {if (true) return sq;}
    throw new Error("Missing return statement in function");
  }

  static final public Query Index() throws ParseException {
  IndexDef indxQ = new IndexDef();
  String dva;
    jj_consume_token(INDEX);
    indxQ.name = getIdentifier();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QSTRING:
      indxQ.comment = getQString();
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    jj_consume_token(ON);
    indxQ.className = getIdentifier();
    jj_consume_token(LP);
    dva = getIdentifier();
    indxQ.addDva(dva);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_8;
      }
      jj_consume_token(COMMA);
      dva = getIdentifier();
      indxQ.addDva(dva);
    }
    jj_consume_token(RP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNIQUE:
      jj_consume_token(UNIQUE);
      indxQ.unique = true;
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    jj_consume_token(SC);
    {if (true) return indxQ;}
    throw new Error("Missing return statement in function");
  }

  static final public Query Modify() throws ParseException {
  ModifyQuery mq = new ModifyQuery();
    jj_consume_token(MODIFY);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LIMIT:
      jj_consume_token(LIMIT);
      jj_consume_token(EQ);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER:
        mq.limit = getInteger();
        break;
      case ALL:
        jj_consume_token(ALL);
              mq.limit = -1;
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      mq.className = getIdentifier();
      break;
    case LSTRING:
      mq.className = getLString();
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(LP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      Assignments(mq);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[25] = jj_gen;
          break label_9;
        }
        jj_consume_token(COMMA);
        Assignments(mq);
      }
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    jj_consume_token(RP);
    jj_consume_token(WHERE);
    mq.expression = getExpression();
    jj_consume_token(SC);
                {if (true) return mq;}
    throw new Error("Missing return statement in function");
  }

  static final public void AttributePath(RetrieveQuery rq) throws ParseException {
        AttributePath attributePath = new AttributePath();
        String eva;
        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      attributePath.attribute = getIdentifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LB:
        jj_consume_token(LB);
        attributePath.index = getInteger();
        jj_consume_token(RB);
        break;
      default:
        jj_la1[27] = jj_gen;
        ;
      }
      break;
    case ASTERISK:
      t = jj_consume_token(ASTERISK);
                        attributePath.attribute = t.image;
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OF:
      jj_consume_token(OF);
      eva = getIdentifier();
                        attributePath.addIndirection(eva);
      label_10:
      while (true) {
        if (jj_2_2(5)) {
          ;
        } else {
          break label_10;
        }
        jj_consume_token(COMMA);
        jj_consume_token(OF);
        eva = getIdentifier();
                                attributePath.addIndirection(eva);
      }
      break;
    default:
      jj_la1[29] = jj_gen;
      ;
    }
                rq.addAttributePath(attributePath);
  }

  static final public void Assignments(UpdateQuery uq) throws ParseException {
    if (jj_2_3(5)) {
      DvaAssign(uq);
    } else if (jj_2_4(5)) {
      EvaAssign(uq);

    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void DvaAssign(UpdateQuery uq) throws ParseException {
        DvaAssignment dvaAssign = new DvaAssignment();
    dvaAssign.AttributeName = getIdentifier();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LB:
      jj_consume_token(LB);
      dvaAssign.Index = getInteger();
      jj_consume_token(RB);
      break;
    default:
      jj_la1[30] = jj_gen;
      ;
    }
    jj_consume_token(ASSN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
      dvaAssign.Value = getBoolean();
                        uq.addAssignment(dvaAssign);
      break;
    case QSTRING:
      dvaAssign.Value = getQString();
                        uq.addAssignment(dvaAssign);
      break;
    case INTEGER:
      dvaAssign.Value = getInteger();
                        uq.addAssignment(dvaAssign);
      break;
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void EvaAssign(UpdateQuery uq) throws ParseException {
        EvaAssignment evaAssign = new EvaAssignment();
    evaAssign.AttributeName = getIdentifier();
    jj_consume_token(ASSN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INCLUDE:
    case EXCLUDE:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INCLUDE:
        jj_consume_token(INCLUDE);
                        evaAssign.mode = EvaAssignment.INCLUDE_MODE;
        break;
      case EXCLUDE:
        jj_consume_token(EXCLUDE);
                  if(uq.getClass() != ModifyQuery.class)
                  {
                    {if (true) throw new ParseException("EXCLUDE option applies to MODIFY queries only");}
                  }
                  else
                  {
                    evaAssign.mode = EvaAssignment.EXCLUDE_MODE;
                  }
        break;
      default:
        jj_la1[32] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[33] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      evaAssign.targetClass = getIdentifier();
      break;
    case LSTRING:
      evaAssign.targetClass = getLString();
      break;
    default:
      jj_la1[34] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(WITH);
    jj_consume_token(LP);
    evaAssign.expression = getExpression();
    jj_consume_token(RP);
                uq.addAssignment(evaAssign);
  }

  static final public void Parents(SubclassDef sq) throws ParseException {
        String parent;
    jj_consume_token(OF);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      parent = getIdentifier();
      break;
    case LSTRING:
      parent = getLString();
      break;
    default:
      jj_la1[35] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        sq.addSuperClass(parent);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[36] = jj_gen;
        break label_11;
      }
      jj_consume_token(AND);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        parent = getIdentifier();
        break;
      case LSTRING:
        parent = getLString();
        break;
      default:
        jj_la1[37] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                sq.addSuperClass(parent);
    }
  }

  static final public void AttrAss(ClassDef ci, UpdateQuery iq) throws ParseException {
    if (jj_2_5(5)) {
      _Dva(ci, iq);
    } else if (jj_2_6(5)) {
      EvaAssign(iq);

    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
